add skills section

--- a/app/index.html
+++ b/app/index.html
@@ -89,12 +89,10 @@
 			<div class="wrap">
 
 				<div class="about-photo"></div>
-
-				<div class="heading_wrap wow fadeInUp">
-					<h4 class="h4" id="h31">about</h4>
-					<h2 class="h2" id="h21">PERSONAL DETAILS</h2>
+				<div class="heading_wrap wow fadeInUp" data-wow-duration=".5s">
+					<h4 class="h4">about</h4>
+					<h2 class="h2">PERSONAL DETAILS</h2>
 				</div>
-
 				<h5 class="h5 about__subheading">I introduce the most creative and original ideas for my
 					customers!</h5>
 
@@ -108,7 +106,7 @@
 
 				<div class="about-info">
 
-					<div class="info wow slideInLeft col-md-4 col-sm-12 column" data-wow-delay="1s">
+					<div class="info wow slideInLeft col-md-4 col-sm-12 column">
 						<div class="info__icon fa-star"></div>
 						<h5 class="h5">Profile</h5>
 						<p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris.
@@ -116,7 +114,7 @@
 							et magnis dis parturient montes, nascetur ridiculus mus.</p>
 					</div>
 
-					<div class="info wow fadeInUp col-md-4 col-sm-12 column" data-wow-delay="1s">
+					<div class="info wow fadeInUp col-md-4 col-sm-12 column">
 						<div class="info__icon fa-location-arrow"></div>
 						<h5 class="h5">Address</h5>
 						<p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris.
@@ -124,7 +122,7 @@
 							et magnis dis parturient montes, nascetur ridiculus mus.</p>
 					</div>
 
-					<div class="info wow slideInRight col-md-4 col-sm-12 column" data-wow-delay="1s">
+					<div class="info wow slideInRight col-md-4 col-sm-12 column">
 						<div class="info__icon fa-flag"></div>
 						<h5 class="h5">Hobbies <span>&#38;</span> interests</h5>
 						<p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris.
@@ -133,44 +131,94 @@
 					</div>
 
 				</div>
-
 			</div>
 
 		</section>
 		<!-- Section end -->
 
-		<section style="text-align: center;">
-			<div class="bg-holder"><img src="img/fon_2.jpg" width="100%" height="auto" alt></div>
 
-			<div class="heading_wrap wow slideInRight" data-wow-delay="1s">
-				<h4 class="h4" id="h32">about</h4>
-				<h2 class="h2" id="h22">PERSONAL DETAILS</h2>
+		<!-- Section skills start -->
+		<section class="skills">
+			<div class="bg-holder">
+				<img src="img/fon_2.jpg" width="100%" height="auto" alt>
+
+				<div class="skills-overlay">
+					<div class="wrap">
+
+						<div class="heading_wrap wow fadeInUp" data-wow-delay="0.5s" data-wow-duration=".5s">
+							<h4 class="h4">My skills</h4>
+							<h2 class="h2">I am good at</h2>
+						</div>
+
+						<div class="percent_wrap">
+
+							<div class="percent col-xs-6 col-sm-3">
+								<figure class="percent__chart" data-percent="85">
+									<div class="percent__value">85%</div>
+									<svg class="percent__svg" width="200" height="200">
+										<circle id="outer-1" class="percent__outer" cx="95" cy="95" r="65" transform="rotate(-90, 95, 95)"/>
+									</svg>
+								</figure>
+								<div class="percent__circle">
+									<div class="percent__shadow wow zoomIn" data-wow-duration=".5s"></div>
+								</div>
+								<span class="percent__lang wow zoomIn" data-wow-delay="0s"
+											data-wow-duration="1s">html5/css3</span>
+							</div>
+
+							<div class="percent col-xs-6 col-sm-3">
+								<figure class="percent__chart" data-percent="25">
+									<div class="percent__value">25%</div>
+									<svg class="percent__svg" width="200" height="200">
+										<circle id="outer-2" class="percent__outer" cx="95" cy="95" r="65" transform="rotate(-90, 95, 95)"/>
+									</svg>
+								</figure>
+								<div class="percent__circle">
+									<div class="percent__shadow wow zoomIn" data-wow-delay=".2s" data-wow-duration=".5s"></div>
+								</div>
+								<span class="percent__lang wow zoomIn" data-wow-delay=".2s"
+											data-wow-duration="1s">js/jquery</span>
+							</div>
+
+							<div class="percent col-xs-6 col-sm-3">
+								<figure class="percent__chart" data-percent="50">
+									<div class="percent__value">50%</div>
+									<svg class="percent__svg" width="200" height="200">
+										<circle id="outer-3" class="percent__outer" cx="95" cy="95" r="65" transform="rotate(-90, 95, 95)"/>
+									</svg>
+								</figure>
+								<div class="percent__circle">
+									<div class="percent__shadow wow zoomIn" data-wow-delay=".4s" data-wow-duration=".5s"></div>
+								</div>
+								<span class="percent__lang wow zoomIn" data-wow-delay=".4s" data-wow-duration="1s">photoshop</span>
+							</div>
+
+							<div class="percent col-xs-6 col-sm-3">
+								<figure class="percent__chart" data-percent="70">
+									<div class="percent__value">70%</div>
+									<svg class="percent__svg" width="200" height="200">
+										<circle id="outer-4" class="percent__outer" cx="95" cy="95" r="65" transform="rotate(-90, 95, 95)"/>
+									</svg>
+								</figure>
+								<div class="percent__circle">
+									<div class="percent__shadow wow zoomIn" data-wow-delay=".6s" data-wow-duration=".5s"></div>
+								</div>
+								<span class="percent__lang wow zoomIn" data-wow-delay=".6s"
+											data-wow-duration="1s">sass/scss</span>
+							</div>
+
+						</div>
+					</div>
+				</div>
 			</div>
-			<br/>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-				Alias aperiam, aspernatur autem consectetur cum cumque dignissimos
-				eaque earum eius, est illo ipsa ipsam molestiae nesciunt officiis
-				quibusdam sed ut? Aut cum, est eum expedita, id in ipsam iste natus
-				nesciunt perspiciatis, placeat quibusdam quis repudiandae suscipit
-				tempore ullam voluptates! Dolorum.
-			</p><br/>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-				Alias aperiam, aspernatur autem consectetur cum cumque dignissimos
-				eaque earum eius, est illo ipsa ipsam molestiae nesciunt officiis
-				quibusdam sed ut? Aut cum, est eum expedita, id in ipsam iste natus
-				nesciunt perspiciatis, placeat quibusdam quis repudiandae suscipit
-				tempore ullam voluptates! Dolorum.
-			</p><br/>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-				Alias aperiam, aspernatur autem consectetur cum cumque dignissimos
-				eaque earum eius, est illo ipsa ipsam molestiae nesciunt officiis
-				quibusdam sed ut? Aut cum, est eum expedita, id in ipsam iste natus
-				nesciunt perspiciatis, placeat quibusdam quis repudiandae suscipit
-				tempore ullam voluptates! Dolorum.
-			</p><br/>
 
 		</section>
+		<!-- Section skills end -->
 
+
+		<!-- Section skills start -->
+		<section style="background: #434343; height: 300px;"></section>
+		<!-- Section skills end -->
 
 															<!-- Common blocks -->
 
