--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
 						</div>
 
 						<div>
-							<span class="header__logo">GT</span>
+							<a href="#" class="header__logo">GT</a>
 							<h1 class="header__heading h1">TATIANA GRANCHENKO</h1>
 							<h3 class="h3">FRONT END WEB DEVELOPER</h3>
 
@@ -89,10 +89,14 @@
 			<div class="wrap">
 
 				<div class="about-photo"></div>
-				<div class="heading_wrap wow fadeInUp" data-wow-duration=".5s">
-					<h4 class="h4">about</h4>
-					<h2 class="h2">PERSONAL DETAILS</h2>
+
+				<div class="overHidden">
+					<div class="heading_wrap wow fadeInUp" data-wow-duration=".5s">
+						<h4 class="h4">about</h4>
+						<h2 class="h2">PERSONAL DETAILS</h2>
+					</div>
 				</div>
+
 				<h5 class="h5 about__subheading">I introduce the most creative and original ideas for my
 					customers!</h5>
 
@@ -145,14 +149,16 @@
 				<div class="skills-overlay">
 					<div class="wrap">
 
-						<div class="heading_wrap wow fadeInUp" data-wow-delay="0.5s" data-wow-duration=".5s">
-							<h4 class="h4">My skills</h4>
-							<h2 class="h2">I am good at</h2>
+						<div class="overHidden">
+							<div class="heading_wrap wow fadeInUp" data-wow-delay="0.5s" data-wow-duration=".5s">
+								<h4 class="h4">My skills</h4>
+								<h2 class="h2">I am good at</h2>
+							</div>
 						</div>
 
 						<div class="percent_wrap">
 
-							<div class="percent col-xs-6 col-sm-3">
+							<div class="percent col-md-3 col-sm-6">
 								<figure class="percent__chart" data-percent="85">
 									<div class="percent__value">85%</div>
 									<svg class="percent__svg" width="200" height="200">
@@ -166,7 +172,7 @@
 											data-wow-duration="1s">html5/css3</span>
 							</div>
 
-							<div class="percent col-xs-6 col-sm-3">
+							<div class="percent col-md-3 col-sm-6">
 								<figure class="percent__chart" data-percent="25">
 									<div class="percent__value">25%</div>
 									<svg class="percent__svg" width="200" height="200">
@@ -180,7 +186,7 @@
 											data-wow-duration="1s">js/jquery</span>
 							</div>
 
-							<div class="percent col-xs-6 col-sm-3">
+							<div class="percent col-md-3 col-sm-6">
 								<figure class="percent__chart" data-percent="50">
 									<div class="percent__value">50%</div>
 									<svg class="percent__svg" width="200" height="200">
@@ -193,7 +199,7 @@
 								<span class="percent__lang wow zoomIn" data-wow-delay=".4s" data-wow-duration="1s">photoshop</span>
 							</div>
 
-							<div class="percent col-xs-6 col-sm-3">
+							<div class="percent col-md-3 col-sm-6">
 								<figure class="percent__chart" data-percent="70">
 									<div class="percent__value">70%</div>
 									<svg class="percent__svg" width="200" height="200">
@@ -216,9 +222,168 @@
 		<!-- Section skills end -->
 
 
+		<!-- Section resume start -->
+		<section class="resume_wrap">
+
+			<div class="wrap resume">
+				<div class="overHidden">
+					<div class="heading_wrap wow fadeInUp" data-wow-delay="0.5s" data-wow-duration=".5s">
+						<h4 class="h4">resume</h4>
+						<h2 class="h2">MY ENTIRE CAREER</h2>
+					</div>
+				</div>
+
+				<h4 class="h4 h4_orange">Work experience</h4>
+
+				<div class="resumes_wrap">
+					<div class="resumes col-lg-3 col-md-4 col-sm-12">
+						<div class="wow fadeInRight">
+							<div class="resumes__date">2008 - <span class="resumes__date_orange">NOW</span></div>
+							<h6 class="h6 h6_orange">Company name</h6>
+							<p class="resumes__text">RPM "Kharkivautogas"</p>
+						</div>
+					</div>
+
+					<div class="experience col-lg-9 col-md-7 col-sm-12">
+						<div class="wow fadeInLeft">
+							<h6 class="h6 experience__heading">Position at work:<span
+								class="h6_gray">accountant 1-st category</span></h6>
+							<p class="experience__text">Work with bank institutions, enter into a contract,
+								open and paying company
+								accounts,
+								рosting of accounting transactions.</p>
+							<p>Work wit programs: Client Bank System, 1C.</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+
+			<div class="resume_wrap1">
+				<div class="wrap resume">
+
+					<h4 class="h4 h4_orange">Education</h4>
+
+					<div class="resumes_wrap">
+						<div class="resumes col-lg-3 col-md-4 col-sm-12">
+							<div class="wow fadeInRight">
+								<div class="resumes__date">2003 - 2008</div>
+								<h6 class="h6 h6_orange">University name</h6>
+								<p class="resumes__text">Kharkiv National University of <span>Construction and Architecture</span></p>
+							</div>
+						</div>
+						<div class="experience experience_first col-lg-9 col-md-7 col-sm-12">
+							<div class="wow fadeInLeft">
+								<h6 class="h6 experience__heading">Profession:<span class="h6_gray"> Heat and Gas
+									Supply and Ventilation specialist</span></h6>
+								<p class="experience__text">Development of projects for heating, gas supply and ventilation.
+								</p>
+							</div>
+						</div>
+					</div>
+
+					<div class="resumes_wrap">
+						<div class="resumes col-lg-3 col-md-4 col-sm-12">
+							<div class="wow fadeInRight">
+								<div class="resumes__date">2016 - 2017</div>
+								<h6 class="h6 h6_orange">University name</h6>
+								<p class="resumes__text">Ukrainian IT_School</p>
+							</div>
+						</div>
+						<div class="experience col-lg-9 col-md-7 col-sm-12">
+							<div class="wow fadeInLeft">
+								<h6 class="h6 experience__heading">Profession: <span class="h6_gray">Front-End Web developer</span></h6>
+								<p class="experience__text">HTML5, CSS3, Twitter Bootstrap 3, Less, Gulp, Git, Alaptive markup, PerfectPixel, JavaScript,
+									JQuery (at the level of application of ready-made plugins),
+									Photoshop.</p>
+							</div>
+						</div>
+					</div>
+					<a class="btn" href="https://github.com/Tani4ka/Resume">DOWNLOAD RESUME</a>
+				</div>
+			</div>
+
+		</section>
+		<!-- Section resume end -->
+
+
+		<!-- Section portfolio start -->
+		<section class="portfolio_wrap">
+
+			<div class="wrap portfolio">
+				<div class="overHidden">
+					<div class="heading_wrap wow fadeInUp" data-wow-delay="0.5s" data-wow-duration=".5s">
+						<h4 class="h4">portfolio</h4>
+						<h2 class="h2">My works</h2>
+					</div>
+				</div>
+
+				<!-- Works portfolio start content-filter -->
+				<main class="cd-main-content">
+
+					<div class="cd-tab-filter-wrapper">
+						<div class="cd-tab-filter">
+							<ul class="cd-filters">
+								<li class="placeholder"><a class="btn" data-type="all" href="#0">All
+								</a>
+									<!-- selected option on mobile --></li>
+								<li class="filter"><a class="selected btn" href="#0" data-type="all">All</a></li>
+								<li class="filter" data-filter=".color-1"><a class="btn" href="#0" data-type="color-1">Waxom</a></li>
+								<li class="filter" data-filter=".color-2"><a class="btn" href="#0" data-type="color-2">Bino</a></li>
+								<li class="filter" data-filter=".color-3"><a class="btn" href="#0" data-type="color-3">Resume</a></li>
+								<li class="filter" data-filter=".color-4"><a class="btn" href="#0" data-type="color-4">Hofmann</a></li>
+								<li class="filter" data-filter=".color-5"><a class="btn" href="#0" data-type="color-5">Brotherhood</a></li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="cd-gallery">
+						<ul>
+							<li class="mix color-5 check1 radio2 option3">
+								<img src="img/portfolio/brother_1.jpg" alt="Image 1">
+							</li>
+							<li class="mix color-2 check2 radio2 option2">
+								<img src="img/portfolio/bino_1.png" alt="Image 2">
+							</li>
+							<li class="mix color-1 check3 radio3 option1">
+								<img src="img/portfolio/waxom_1.jpg" alt="Image 3">
+							</li>
+							<li class="mix color-1 check3 radio2 option4">
+								<img src="img/portfolio/waxom_2.jpg" alt="Image 4">
+							</li>
+							<li class="mix color-2 check1 radio3 option2">
+								<img src="img/portfolio/bino_2.png" alt="Image 5">
+							</li>
+							<li class="mix color-4 check2 radio3 option3">
+								<img src="img/portfolio/hofmann_1.jpg" alt="Image 6">
+							</li>
+							<li class="mix color-4 check2 radio2 option1">
+								<img src="img/portfolio/hofmann_2.jpg" alt="Image 7">
+							</li>
+							<li class="mix color-3 check1 radio3 option4">
+								<img src="img/portfolio/resume_2.png" alt="Image 8">
+							</li>
+						</ul>
+					</div>
+
+				</main>
+
+			</div>
+		</section>
+		<!-- Section portfolio end -->
+
+
 		<!-- Section skills start -->
-		<section style="background: #434343; height: 300px;"></section>
+		<section style="background: #434343; height: 800px;"></section>
 		<!-- Section skills end -->
+
+
+		<!-- Footer start -->
+		<footer class="footer">
+			<span class="footer__heading">TATIANA GRANCHENKO</span>
+			<p class="footer__copyright"><i class="fa fa-copyright" aria-hidden="true"> 2017 Resume.</i></p>
+		</footer>
+		<!-- Footer end -->
 
 															<!-- Common blocks -->
 
