add contacts section

--- a/app/index.html
+++ b/app/index.html
@@ -84,65 +84,70 @@
 		</header>
 		<!-- Header end -->
 
-		<!-- Section start -->
-		<section class="about">
-			<div class="wrap">
+		<!-- Section about -->
+		<section class="about" id="ancor-about">
+			<div class="wrap-flex flex-center">
+				<div class="col-sm-11">
 
-				<div class="about-photo"></div>
+					<div class="about-photo"></div>
 
-				<div class="overHidden">
-					<div class="heading_wrap wow fadeInUp" data-wow-duration=".5s">
-						<h4 class="h4">about</h4>
-						<h2 class="h2">PERSONAL DETAILS</h2>
+					<div class="overHidden">
+						<div class="heading_wrap wow fadeInUp" data-wow-duration=".5s">
+							<h4 class="h4">about</h4>
+							<h2 class="h2">PERSONAL DETAILS</h2>
+						</div>
+					</div>
+
+					<h5 class="h5 about__subheading">I introduce the most creative and original ideas for my
+						customers!</h5>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+						Alias aperiam, aspernatur autem consectetur cum cumque dignissimos
+						eaque earum eius, est illo ipsa ipsam molestiae nesciunt officiis
+						quibusdam sed ut? Aut cum, est eum expedita, id in ipsam iste natus
+						nesciunt perspiciatis, placeat quibusdam quis repudiandae suscipit
+						tempore ullam voluptates! Dolorum.
+					</p>
+
+					<div class="about-info">
+
+						<div class="info wow slideInLeft col-md-4 col-sm-12 column">
+							<div class="info__icon fa-star"></div>
+							<h5 class="h5">Profile</h5>
+							<p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris.
+								Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus
+								et magnis dis parturient montes, nascetur ridiculus mus.</p>
+						</div>
+
+						<div class="info wow fadeInUp col-md-4 col-sm-12 column">
+							<div class="info__icon fa-location-arrow"></div>
+							<h5 class="h5">Address</h5>
+							<p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris.
+								Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus
+								et magnis dis parturient montes, nascetur ridiculus mus.</p>
+						</div>
+
+						<div class="info wow slideInRight col-md-4 col-sm-12 column">
+							<div class="info__icon fa-flag"></div>
+							<h5 class="h5">Hobbies <span>&#38;</span> interests</h5>
+							<p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris.
+								Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus
+								et magnis dis parturient montes, nascetur ridiculus mus.</p>
+						</div>
+
 					</div>
 				</div>
 
-				<h5 class="h5 about__subheading">I introduce the most creative and original ideas for my
-					customers!</h5>
-
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-					Alias aperiam, aspernatur autem consectetur cum cumque dignissimos
-					eaque earum eius, est illo ipsa ipsam molestiae nesciunt officiis
-					quibusdam sed ut? Aut cum, est eum expedita, id in ipsam iste natus
-					nesciunt perspiciatis, placeat quibusdam quis repudiandae suscipit
-					tempore ullam voluptates! Dolorum.
-				</p>
-
-				<div class="about-info">
-
-					<div class="info wow slideInLeft col-md-4 col-sm-12 column">
-						<div class="info__icon fa-star"></div>
-						<h5 class="h5">Profile</h5>
-						<p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris.
-							Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus
-							et magnis dis parturient montes, nascetur ridiculus mus.</p>
-					</div>
-
-					<div class="info wow fadeInUp col-md-4 col-sm-12 column">
-						<div class="info__icon fa-location-arrow"></div>
-						<h5 class="h5">Address</h5>
-						<p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris.
-							Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus
-							et magnis dis parturient montes, nascetur ridiculus mus.</p>
-					</div>
-
-					<div class="info wow slideInRight col-md-4 col-sm-12 column">
-						<div class="info__icon fa-flag"></div>
-						<h5 class="h5">Hobbies <span>&#38;</span> interests</h5>
-						<p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris.
-							Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus
-							et magnis dis parturient montes, nascetur ridiculus mus.</p>
-					</div>
-
-				</div>
 			</div>
 
+
+
 		</section>
-		<!-- Section end -->
+		<!-- Section about end -->
 
 
 		<!-- Section skills start -->
-		<section class="skills">
+		<section class="skills" id="ancor-skills">
 			<div class="bg-holder">
 				<img src="img/fon_2.jpg" width="100%" height="auto" alt>
 
@@ -223,7 +228,7 @@
 
 
 		<!-- Section resume start -->
-		<section class="resume_wrap">
+		<section class="resume_wrap" id="ancor-resume">
 
 			<div class="wrap resume">
 				<div class="overHidden">
@@ -236,7 +241,7 @@
 				<h4 class="h4 h4_orange">Work experience</h4>
 
 				<div class="resumes_wrap">
-					<div class="resumes col-lg-3 col-md-4 col-sm-12">
+					<div class="resumes col-lg-2 offset-lg-2 col-md-3 offset-md-1 col-sm-12">
 						<div class="wow fadeInRight">
 							<div class="resumes__date">2008 - <span class="resumes__date_orange">NOW</span></div>
 							<h6 class="h6 h6_orange">Company name</h6>
@@ -244,10 +249,10 @@
 						</div>
 					</div>
 
-					<div class="experience col-lg-9 col-md-7 col-sm-12">
+					<div class="experience col-lg-6 col-md-7 col-sm-12">
 						<div class="wow fadeInLeft">
-							<h6 class="h6 experience__heading">Position at work:<span
-								class="h6_gray">accountant 1-st category</span></h6>
+							<h6 class="h6 experience__heading">Position at work: <span
+								class="h6_gray">Accountant 1-st category</span></h6>
 							<p class="experience__text">Work with bank institutions, enter into a contract,
 								open and paying company
 								accounts,
@@ -265,14 +270,14 @@
 					<h4 class="h4 h4_orange">Education</h4>
 
 					<div class="resumes_wrap">
-						<div class="resumes col-lg-3 col-md-4 col-sm-12">
+						<div class="resumes col-lg-2 offset-lg-2 col-md-3 offset-md-1 col-sm-12">
 							<div class="wow fadeInRight">
 								<div class="resumes__date">2003 - 2008</div>
 								<h6 class="h6 h6_orange">University name</h6>
 								<p class="resumes__text">Kharkiv National University of <span>Construction and Architecture</span></p>
 							</div>
 						</div>
-						<div class="experience experience_first col-lg-9 col-md-7 col-sm-12">
+						<div class="experience experience_first col-lg-6 col-md-7 col-sm-12">
 							<div class="wow fadeInLeft">
 								<h6 class="h6 experience__heading">Profession:<span class="h6_gray"> Heat and Gas
 									Supply and Ventilation specialist</span></h6>
@@ -283,14 +288,14 @@
 					</div>
 
 					<div class="resumes_wrap">
-						<div class="resumes col-lg-3 col-md-4 col-sm-12">
+						<div class="resumes col-lg-2 offset-lg-2 col-md-3 offset-md-1 col-sm-12">
 							<div class="wow fadeInRight">
 								<div class="resumes__date">2016 - 2017</div>
 								<h6 class="h6 h6_orange">University name</h6>
 								<p class="resumes__text">Ukrainian IT_School</p>
 							</div>
 						</div>
-						<div class="experience col-lg-9 col-md-7 col-sm-12">
+						<div class="experience col-lg-6 col-md-7 col-sm-12">
 							<div class="wow fadeInLeft">
 								<h6 class="h6 experience__heading">Profession: <span class="h6_gray">Front-End Web developer</span></h6>
 								<p class="experience__text">HTML5, CSS3, Twitter Bootstrap 3, Less, Gulp, Git, Alaptive markup, PerfectPixel, JavaScript,
@@ -308,7 +313,7 @@
 
 
 		<!-- Section portfolio start -->
-		<section class="portfolio_wrap">
+		<section class="portfolio_wrap" id="ancor-portfolio">
 
 			<div class="wrap portfolio">
 				<div class="overHidden">
@@ -340,28 +345,53 @@
 					<div class="cd-gallery">
 						<ul>
 							<li class="mix color-5 check1 radio2 option3">
-								<img src="img/portfolio/brother_1.jpg" alt="Image 1">
+								<a class="cd-gallery__link"
+									 href="http://webdevgranchenko.esy.es/ProgectBrotherhood/"
+									 target="_blank">
+									<img src="img/portfolio/brother_1.jpg" alt="Image 1">
+								</a>
 							</li>
 							<li class="mix color-2 check2 radio2 option2">
-								<img src="img/portfolio/bino_1.png" alt="Image 2">
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/Bino/"
+									 target="_blank">
+									<img src="img/portfolio/bino_1.png" alt="Image 2">
+								</a>
 							</li>
 							<li class="mix color-1 check3 radio3 option1">
-								<img src="img/portfolio/waxom_1.jpg" alt="Image 3">
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/waxom/"
+									 target="_blank">
+									<img src="img/portfolio/waxom_1.jpg" alt="Image 3">
+								</a>
 							</li>
 							<li class="mix color-1 check3 radio2 option4">
-								<img src="img/portfolio/waxom_2.jpg" alt="Image 4">
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/waxom/"
+									 target="_blank">
+									<img src="img/portfolio/waxom_2.jpg" alt="Image 4">
+								</a>
 							</li>
 							<li class="mix color-2 check1 radio3 option2">
-								<img src="img/portfolio/bino_2.png" alt="Image 5">
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/Bino/"
+									 target="_blank">
+									<img src="img/portfolio/bino_2.png" alt="Image 5">
+								</a>
 							</li>
 							<li class="mix color-4 check2 radio3 option3">
-								<img src="img/portfolio/hofmann_1.jpg" alt="Image 6">
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/hofman/"
+									 target="_blank">
+									<img src="img/portfolio/hofmann_1.jpg" alt="Image 6">
+								</a>
 							</li>
 							<li class="mix color-4 check2 radio2 option1">
-								<img src="img/portfolio/hofmann_2.jpg" alt="Image 7">
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/hofman/"
+									 target="_blank">
+									<img src="img/portfolio/hofmann_2.jpg" alt="Image 7">
+								</a>
 							</li>
 							<li class="mix color-3 check1 radio3 option4">
-								<img src="img/portfolio/resume_2.png" alt="Image 8">
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/Resume/"
+									 target="_blank">
+									<img src="img/portfolio/resume_2.png" alt="Image 8">
+								</a>
 							</li>
 						</ul>
 					</div>
@@ -374,7 +404,28 @@
 
 
 		<!-- Section skills start -->
-		<section style="background: #434343; height: 800px;"></section>
+		<section class="contacts_wrap overlay" id="ancor-contacts">
+			<div id="map" class="map"></div>
+
+			<div class="wrap">
+				<div class="overHidden">
+					<div class="heading_wrap wow fadeInUp" data-wow-delay="0.5s" data-wow-duration=".5s">
+						<h4 class="h4">contacts</h4>
+						<h2 class="h2">Get in touch with me</h2>
+					</div>
+				</div>
+
+				<div class="contacts">
+					<h5 class="contacts__heading">My adress</h5>
+					<address class="contacts__item contacts__item_home">Ukraine, Kharkiv, street S.Gritsevca, house
+						№9</address>
+					<a href="tel:0956213431" class="contacts__item contacts__item_phone">+38 (095) 621-34-31</a>
+					<a href="mailto:tatyana.granchenko@gmail.com" class="contacts__item contacts__item_email">
+						tatyana.granchenko@gmail.com</a>
+				</div>
+			</div>
+
+		</section>
 		<!-- Section skills end -->
 
 
@@ -390,42 +441,8 @@
 		<!--buttot to top-->
 		<div class="top" title="Наверх"><i class="fa fa-angle-double-up"></i></div>
 
-		<!--for modal windows-->
-		<div class="hidden">
-			<!--for modal windows-->
-			<!--<div class="hidden">-->
-			<!--<form class="popup callback zoom-anim-dialog" id="callback">-->
-
-			<!--<div class="success">-->
-			<!--<h4 class="success__header">Спасибо за заявку!</h4>Наш менеджер свяжется с вами в ближайшее время.-->
-			<!--</div>-->
-
-			<!--&lt;!&ndash; Hidden Required Fields &ndash;&gt;-->
-			<!--<input type="hidden" name="project_name" value="Urdis">-->
-			<!--<input type="hidden" name="admin_email" value="tatyana.granchenko@gmail.com"> &lt;!&ndash; можно указать в mail.php для конфединциальности вместо trim($_POST["admin_email"]); &ndash;&gt;-->
-			<!--<input type="hidden" name="form_subject" value="Заявка с сайта Urdis">-->
-			<!--&lt;!&ndash; END Hidden Required Fields &ndash;&gt;-->
-
-
-			<!--<h3 class="popup__header">Заказать звонок</h3>-->
-			<!--<label class="popup__label">-->
-			<!--<span class="popup__text">Ваше имя:</span>-->
-			<!--<input class="popup__input" type="text" name="Имя" placeholder="Введите ваше имя..." required/>-->
-			<!--</label>-->
-			<!--<label class="popup__label">-->
-			<!--<span class="popup__text">Ваш телефон:</span>-->
-			<!--<input class="popup__input" type="text" name="Телефон" placeholder="Введите ваш телефон..." required/>-->
-			<!--</label>-->
-			<!--<div class="popup__button">-->
-			<!--<button class="button">Отправить</button>-->
-			<!--</div>-->
-			<!--<input class="formname" type="hidden" name="Форма"/> &lt;!&ndash; С какой формы пришла заявка &ndash;&gt;-->
-			<!--</form>-->
-			<!--</div>-->
-		</div>
-
 		<!-- preloader -->
-		<!--<div id="hellopreloader"><div id="hellopreloader_preload"></div></div>-->
+		<div id="hellopreloader"><div id="hellopreloader_preload"></div></div>
 
 	</div>
 
@@ -438,11 +455,13 @@
 	<script src="libs/respond/respond.min.js"></script>
 	<![endif]-->
 
-	<!--<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">-->
+
 	<link rel="stylesheet" href="css/style.min.css">
-	<!--<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>-->
 	<script src="js/scripts.min.js"></script>
 
+	<!-- Map -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD3D7OR3uR7q-aqJWW4HIRyDJxuKfH6d6E&callback=initMap" async defer></script>
+	<script type="text/javascript" src="js/map.min.js" defer></script>
 
 </body>
 </html>
