--- a/app/index.html
+++ b/app/index.html
@@ -101,12 +101,9 @@
 					<h5 class="h5 about__subheading">I introduce the most creative and original ideas for my
 						customers!</h5>
 
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-						Alias aperiam, aspernatur autem consectetur cum cumque dignissimos
-						eaque earum eius, est illo ipsa ipsam molestiae nesciunt officiis
-						quibusdam sed ut? Aut cum, est eum expedita, id in ipsam iste natus
-						nesciunt perspiciatis, placeat quibusdam quis repudiandae suscipit
-						tempore ullam voluptates! Dolorum.
+					<p>I am looking for interesting Front-End Web developer position where I can create
+						highly readable and easily maintainable source code with the users of mind, learn new
+						technologies and improve of my own skills as Front-End Web developer.
 					</p>
 
 					<div class="about-info">
@@ -114,33 +111,35 @@
 						<div class="info wow slideInLeft col-md-4 col-sm-12 column">
 							<div class="info__icon fa-star"></div>
 							<h5 class="h5">Profile</h5>
-							<p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris.
-								Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus
-								et magnis dis parturient montes, nascetur ridiculus mus.</p>
+							<span><span class="info__strong">Name: </span>Hranchenko Tatiana.</span>
+							<span><span class="info__strong">Date of birth: </span>29.01.1986.</span>
+							<span><span class="info__strong">Personal quolities: </span>responsible,
+								motivated, hardworking, team worker.</span>
+							<!-- desire to achieve maximum results -->
+							<span><span class="info__strong">English: </span>Pre-Intermediate.</span>
 						</div>
 
 						<div class="info wow fadeInUp col-md-4 col-sm-12 column">
 							<div class="info__icon fa-location-arrow"></div>
 							<h5 class="h5">Address</h5>
-							<p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris.
-								Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus
-								et magnis dis parturient montes, nascetur ridiculus mus.</p>
+							<span><span class="info__strong">Country: </span>Ukraine.</span>
+							<span><span class="info__strong">City: </span>Kharkiv.</span>
+							<span><span class="info__strong">Street: </span>Sergiya Gritsevca.</span>
+							<span><span class="info__strong">Number of house: </span>9.</span>
 						</div>
 
 						<div class="info wow slideInRight col-md-4 col-sm-12 column">
 							<div class="info__icon fa-flag"></div>
-							<h5 class="h5">Hobbies <span>&#38;</span> interests</h5>
-							<p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris.
-								Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus
-								et magnis dis parturient montes, nascetur ridiculus mus.</p>
+							<h5 class="h5">Skills</h5>
+							<p>HTML5, CSS3, Twitter Bootstrap, Scss, Gulp, Git, Alaptive markup, PerfectPixel,
+								Photoshop, JavaScript, JQuery (at the level of application for ready-made
+								plugins).</p>
 						</div>
 
 					</div>
 				</div>
 
 			</div>
-
-
 
 		</section>
 		<!-- Section about end -->
@@ -232,7 +231,7 @@
 
 			<div class="wrap resume">
 				<div class="overHidden">
-					<div class="heading_wrap wow fadeInUp" data-wow-delay="0.5s" data-wow-duration=".5s">
+					<div class="heading_wrap wow fadeInUp" data-wow-duration=".5s">
 						<h4 class="h4">resume</h4>
 						<h2 class="h2">MY ENTIRE CAREER</h2>
 					</div>
@@ -257,7 +256,7 @@
 								open and paying company
 								accounts,
 								рosting of accounting transactions.</p>
-							<p>Work wit programs: Client Bank System, 1C.</p>
+							<p>Work wit programs: Client Bank System, Finexpert, 1C.</p>
 						</div>
 					</div>
 
@@ -277,11 +276,12 @@
 								<p class="resumes__text">Kharkiv National University of <span>Construction and Architecture</span></p>
 							</div>
 						</div>
-						<div class="experience experience_first col-lg-6 col-md-7 col-sm-12">
+						<div class="experience col-lg-6 col-md-7 col-sm-12">
 							<div class="wow fadeInLeft">
-								<h6 class="h6 experience__heading">Profession:<span class="h6_gray"> Heat and Gas
+								<h6 class="h6 experience__heading">Profession:<span class="h6_gray"> Heat-Gas
 									Supply and Ventilation specialist</span></h6>
-								<p class="experience__text">Development of projects for heating, gas supply and ventilation.
+								<p class="experience__text">Development of projects for heating, gas supply and
+									ventilation systems, construction engineer.
 								</p>
 							</div>
 						</div>
@@ -291,19 +291,44 @@
 						<div class="resumes col-lg-2 offset-lg-2 col-md-3 offset-md-1 col-sm-12">
 							<div class="wow fadeInRight">
 								<div class="resumes__date">2016 - 2017</div>
-								<h6 class="h6 h6_orange">University name</h6>
+								<h6 class="h6 h6_orange">School name</h6>
 								<p class="resumes__text">Ukrainian IT_School</p>
 							</div>
 						</div>
 						<div class="experience col-lg-6 col-md-7 col-sm-12">
 							<div class="wow fadeInLeft">
-								<h6 class="h6 experience__heading">Profession: <span class="h6_gray">Front-End Web developer</span></h6>
-								<p class="experience__text">HTML5, CSS3, Twitter Bootstrap 3, Less, Gulp, Git, Alaptive markup, PerfectPixel, JavaScript,
-									JQuery (at the level of application of ready-made plugins),
-									Photoshop.</p>
+								<h6 class="h6 experience__heading">Profession: <span class="h6_gray">Front-End
+									Web development</span></h6>
+								<p class="experience__text">HTML basic, cross-browser compatibility and code
+									validation,
+									SEO-layout, creating of images sprites, CSS animations ant transformations,
+									PerfectPixel layout,	use	of non-standart fonts, responsive design, Twitter
+									Bootstrap 3, Query plagins,
+									code contaraction and optimization.</p>
 							</div>
 						</div>
 					</div>
+
+					<div class="resumes_wrap">
+						<div class="resumes col-lg-2 offset-lg-2 col-md-3 offset-md-1 col-sm-12">
+							<div class="wow fadeInRight">
+								<div class="resumes__date">2017 -
+									<span class="resumes__date_orange">NOW</span></div>
+								<h6 class="h6 h6_orange">School name</h6>
+								<p class="resumes__text">Ukrainian IT_School</p>
+							</div>
+						</div>
+						<div class="experience col-lg-6 col-md-7 col-sm-12">
+							<div class="wow fadeInLeft">
+								<h6 class="h6 experience__heading">Profession: <span class="h6_gray">JavaScript developer</span></h6>
+								<p class="experience__text">JavaScript and DOM basics, obects, methods, events,
+									regular expressions, timers and intervals, closures, Cookies, WebStorodes and
+									SessionStorages, SVG, Canvas, XMLHttpRequest, Jade and Stylus tools, Gulp, Git,
+									functional and prototype-based approaches in JavaScript.</p>
+							</div>
+						</div>
+					</div>
+
 					<a class="btn" href="https://github.com/Tani4ka/Resume">DOWNLOAD RESUME</a>
 				</div>
 			</div>
@@ -317,7 +342,7 @@
 
 			<div class="wrap portfolio">
 				<div class="overHidden">
-					<div class="heading_wrap wow fadeInUp" data-wow-delay="0.5s" data-wow-duration=".5s">
+					<div class="heading_wrap wow fadeInUp" data-wow-duration=".5s">
 						<h4 class="h4">portfolio</h4>
 						<h2 class="h2">My works</h2>
 					</div>
@@ -409,7 +434,7 @@
 
 			<div class="wrap">
 				<div class="overHidden">
-					<div class="heading_wrap wow fadeInUp" data-wow-delay="0.5s" data-wow-duration=".5s">
+					<div class="heading_wrap wow fadeInUp" data-wow-duration=".5s">
 						<h4 class="h4">contacts</h4>
 						<h2 class="h2">Get in touch with me</h2>
 					</div>
