fix some mistakes

--- a/app/index.html
+++ b/app/index.html
@@ -432,7 +432,7 @@
 		<section class="contacts_wrap overlay" id="ancor-contacts">
 			<div id="map" class="map"></div>
 
-			<div class="wrap">
+			<div class="wrap wrap_over">
 				<div class="overHidden">
 					<div class="heading_wrap wow fadeInUp" data-wow-duration=".5s">
 						<h4 class="h4">contacts</h4>
