--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
  <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
 
@@ -35,7 +35,7 @@
 		<!-- Header start -->
 		<header class="header">
 			<div class="bg-holder">
-				<img src="img/fon.jpg" width="100%" height="auto" alt>
+				<img class="bg-holder__img" src="img/fon.jpg" alt="Header background">
 
 				<div class="header-overlay">
 					<div class="wrap">
@@ -131,7 +131,7 @@
 						<div class="info wow slideInRight col-md-4 col-sm-12 column">
 							<div class="info__icon fa-flag"></div>
 							<h5 class="h5">Skills</h5>
-							<p>HTML5, CSS3, Twitter Bootstrap, Scss, Gulp, Git, Alaptive markup, PerfectPixel,
+							<p>HTML5, CSS3, Twitter Bootstrap, SCSS, Gulp, Git, Alaptive markup, PerfectPixel,
 								Photoshop, JavaScript, JQuery (at the level of application for ready-made
 								plugins).</p>
 						</div>
@@ -148,7 +148,7 @@
 		<!-- Section skills start -->
 		<section class="skills" id="ancor-skills">
 			<div class="bg-holder">
-				<img src="img/fon_2.jpg" width="100%" height="auto" alt>
+				<img class="bg-holder__img" src="img/fon_2.jpg" alt="Paralax background">
 
 				<div class="skills-overlay">
 					<div class="wrap">
@@ -328,8 +328,8 @@
 							</div>
 						</div>
 					</div>
-
-					<a class="btn" href="https://github.com/Tani4ka/Resume">DOWNLOAD RESUME</a>
+					<a class="btn" target="_blank"
+						 href="http://webdevgranchenko.esy.es/Resume_Tatyana.pdf">DOWNLOAD RESUME</a>
 				</div>
 			</div>
 
@@ -371,7 +371,7 @@
 						<ul>
 							<li class="mix color-5 check1 radio2 option3">
 								<a class="cd-gallery__link"
-									 href="http://webdevgranchenko.esy.es/ProgectBrotherhood/"
+									 href="http://webdevgranchenko.esy.es/Brotherhood/"
 									 target="_blank">
 									<img src="img/portfolio/brother_1.jpg" alt="Image 1">
 								</a>
@@ -383,13 +383,13 @@
 								</a>
 							</li>
 							<li class="mix color-1 check3 radio3 option1">
-								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/waxom/"
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/waxom-1/"
 									 target="_blank">
 									<img src="img/portfolio/waxom_1.jpg" alt="Image 3">
 								</a>
 							</li>
 							<li class="mix color-1 check3 radio2 option4">
-								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/waxom/"
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/waxom-1/"
 									 target="_blank">
 									<img src="img/portfolio/waxom_2.jpg" alt="Image 4">
 								</a>
@@ -413,7 +413,7 @@
 								</a>
 							</li>
 							<li class="mix color-3 check1 radio3 option4">
-								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/Resume/"
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/MyRessume/"
 									 target="_blank">
 									<img src="img/portfolio/resume_2.png" alt="Image 8">
 								</a>
