add task critical.css

--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,11 @@
  <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 
 <head>
 
 	<meta charset="utf-8">
 
-	<title>Tanya-template</title>
+	<title>Tanya-resume</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,7 +24,13 @@
 	<!-- iOS Safari -->
 	<meta name="apple-mobile-web-app-status-bar-style" content="#000">
 
+	<!--[if lt IE 9]>
+	<script src="js/html5shiv.min.js"></script>
+	<script src="js/html5shiv-printshiv.min.js"></script>
+	<![endif]-->
+
 	<style>body { opacity: 0; overflow-x: hidden; } html { background-color: #fff; }</style>
+	<link rel="stylesheet" href="css/style.min.css">
 
 </head>
 
@@ -377,7 +383,7 @@
 								</a>
 							</li>
 							<li class="mix color-2 check2 radio2 option2">
-								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/Bino/"
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/Binno/"
 									 target="_blank">
 									<img src="img/portfolio/bino_1.png" alt="Image 2">
 								</a>
@@ -395,7 +401,7 @@
 								</a>
 							</li>
 							<li class="mix color-2 check1 radio3 option2">
-								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/Bino/"
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/Binno/"
 									 target="_blank">
 									<img src="img/portfolio/bino_2.png" alt="Image 5">
 								</a>
@@ -413,7 +419,7 @@
 								</a>
 							</li>
 							<li class="mix color-3 check1 radio3 option4">
-								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/MyRessume/"
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/MyResumen/"
 									 target="_blank">
 									<img src="img/portfolio/resume_2.png" alt="Image 8">
 								</a>
@@ -473,15 +479,7 @@
 
                               <!-- Scripts -->
 
-	<!--[if lt IE 9]>
-	<script src="libs/html5shiv/es5-shim.min.js"></script>
-	<script src="libs/html5shiv/html5shiv.min.js"></script>
-	<script src="libs/html5shiv/html5shiv-printshiv.min.js"></script>
-	<script src="libs/respond/respond.min.js"></script>
-	<![endif]-->
-
-
-	<link rel="stylesheet" href="css/style.min.css">
+	<!--<link rel="stylesheet" href="css/style.min.css">-->
 	<script src="js/scripts.min.js"></script>
 
 	<!-- Map -->
