--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,9 @@
 						</div>
 
 						<div>
-							<a href="#" class="header__logo">GT</a>
+							<div>
+								<a href="#" class="header__logo">GT</a>
+							</div>
 							<h1 class="header__heading h1">TATIANA GRANCHENKO</h1>
 							<h3 class="h3">FRONT END WEB DEVELOPER</h3>
 
@@ -197,8 +199,8 @@
 							</div>
 
 							<div class="percent col-md-3 col-sm-6">
-								<figure class="percent__chart" data-percent="50">
-									<div class="percent__value">50%</div>
+								<figure class="percent__chart" data-percent="20">
+									<div class="percent__value">20%</div>
 									<svg class="percent__svg" width="200" height="200">
 										<circle id="outer-3" class="percent__outer" cx="95" cy="95" r="65" transform="rotate(-90, 95, 95)"/>
 									</svg>
@@ -206,12 +208,13 @@
 								<div class="percent__circle">
 									<div class="percent__shadow wow zoomIn" data-wow-delay=".4s" data-wow-duration=".5s"></div>
 								</div>
-								<span class="percent__lang wow zoomIn" data-wow-delay=".4s" data-wow-duration="1s">photoshop</span>
+								<span class="percent__lang wow zoomIn" data-wow-delay=".4s"
+											data-wow-duration="1s">photoshop/sketch</span>
 							</div>
 
 							<div class="percent col-md-3 col-sm-6">
-								<figure class="percent__chart" data-percent="70">
-									<div class="percent__value">70%</div>
+								<figure class="percent__chart" data-percent="50">
+									<div class="percent__value">50%</div>
 									<svg class="percent__svg" width="200" height="200">
 										<circle id="outer-4" class="percent__outer" cx="95" cy="95" r="65" transform="rotate(-90, 95, 95)"/>
 									</svg>
@@ -419,7 +422,7 @@
 								</a>
 							</li>
 							<li class="mix color-3 check1 radio3 option4">
-								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/MyResumen/"
+								<a class="cd-gallery__link" href="http://webdevgranchenko.esy.es/PResume/"
 									 target="_blank">
 									<img src="img/portfolio/resume_2.png" alt="Image 8">
 								</a>
